--- a/branda.css
+++ b/branda.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+*{
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  margin: auto;
+}
 .navbar{
   background-color: #F7F7F7 !important;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.75);
@@ -10,4 +18,34 @@
   color: #FFFFFF;
   padding: 0px 35px;
   border-radius: 15px;
+}
+.judulhp{
+  font-size: 50px;
+  font-weight: bold;
+  margin-top: 150px;
+  margin-left: 100px;
+}
+.isihp{
+  margin-left: 100px;
+}
+
+.btn-hp{
+  background-color: #004A8E;
+  color: #FFFFFF;
+  margin-left: 100px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 15px;
+}
+.imghp{
+  margin: 50px;
+}
+footer{
+  background: #FFA500;
+  padding: 10px;
+  padding: 10px 20px;
+  color: #F5F7D4;
+  text-align: center;
 }
