--- a/profilD.css
+++ b/profilD.css
@@ -14,6 +14,12 @@
     margin-left: 45px;
 }
 
+.tengah {
+    margin: 0 auto;
+    display: inline-block;
+    width: 300px;
+}
+
 h3 {
     font-size: 20px;
     font-weight: bold;
